added Threads for evaluate lines